--- a/game.html
+++ b/game.html
@@ -9,9 +9,9 @@
     <div class="info">
         <img height="80" width="80" src="android-brands.svg">
         <div class="houses">Number of Houses with Gifts Delivered </div> 
-        <p class="houses-total"></p>
+        <p class="houses-total"> 0 </p>
         <div>Current Location of Robbie </div>
-        <p class="current-position"></p>
+        <p class="current-position"> x: 0  y: 0</p>
         <button onclick="clickNext()">Begin Simulation</button>
     </div>
 </body>
